fix #25 : minor change. DFS 코드 흐름에 removeLast 적용